--- a/css/index.css
+++ b/css/index.css
@@ -266,6 +266,17 @@ html .body-container .nav-header .header-wrapper .header-left p {
   font-size: 1.5em;
   line-height: 1.2em;
 }
+@media (max-width:800px) {
+  html .body-container .nav-header .header-wrapper .header-left p {
+    background-color: maroon;
+    color: white;
+    font-size: 1.3em;
+    margin: 1em;
+    padding: 1em;
+    line-height: 1.2em;
+    border-radius: 0.5em;
+  }
+}
 @media (max-width:500px) {
   html .body-container .nav-header .header-wrapper .header-left p {
     background-color: maroon;
@@ -501,6 +512,14 @@ html .body-container .main-bot-wrapper section {
   flex-direction: column;
   margin: 1em;
   padding: 1em;
+}
+html .body-container .main-bot-wrapper section figure {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+html .body-container .main-bot-wrapper section figure img {
+  width: 50%;
 }
 html .body-container .main-bot-wrapper section p {
   color: maroon;
