--- a/less/index.less
+++ b/less/index.less
@@ -11,6 +11,17 @@ html {
         margin:0 8%;
         font-family: 'Livvic', sans-serif;
 
+        @media @tablet {
+            max-width: 100%;
+            margin:0%;
+        }
+
+        @media @mobile {
+            max-width: 100%;
+            margin:0%;
+        }
+
+
         .nav-header{
             background-image: url(../imgs/eiliv-sonas-aceron-ZuIDLSz3XLg-unsplash.jpg);
             background-size:100%;
