--- a/less/index.less
+++ b/less/index.less
@@ -444,6 +444,7 @@ html {
                 font-size: 1em;
                 text-align: center;
                 .myMarginMixin(1em,1em);
+                margin-bottom: 0%;
             }
         }   
     }
@@ -807,6 +808,7 @@ html {
                 font-size: 1em;
                 text-align: center;
                 .myMarginMixin(1em,1em);
+                margin-bottom: 0%;
             }
         }
     }
