--- a/less/index.less
+++ b/less/index.less
@@ -455,6 +455,16 @@ html {
         max-width: 100%;
         margin:0 8%;
         font-family: 'Livvic', sans-serif;
+
+        @media @tablet {
+            max-width: 100%;
+            margin:0%;
+        }
+
+        @media @mobile {
+            max-width: 100%;
+            margin:0%;
+        }
     
         .cities-nav-header {
             background-image: url(../imgs/kyler-boone-DrnOxsTcUMg-unsplash.jpg);
