--- a/css/index.css
+++ b/css/index.css
@@ -170,18 +170,16 @@ html .body-container .nav-header .nav-wrapper .nav-logo {
   html .body-container .nav-header .nav-wrapper .nav-logo {
     display: flex;
     align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    width: 50%;
+    justify-content: flex-start;
+    width: 40%;
   }
 }
 @media (max-width:500px) {
   html .body-container .nav-header .nav-wrapper .nav-logo {
     display: flex;
     align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    width: 50%;
+    justify-content: flex-start;
+    width: 40%;
   }
 }
 html .body-container .nav-header .nav-wrapper .nav-logo img {
@@ -192,6 +190,16 @@ html .body-container .nav-header .nav-wrapper .nav-logo h1 {
   font-size: 1.5em;
   color: white;
   width: 15%;
+}
+@media (max-width:800px) {
+  html .body-container .nav-header .nav-wrapper .nav-logo h1 {
+    font-size: 1em;
+  }
+}
+@media (max-width:500px) {
+  html .body-container .nav-header .nav-wrapper .nav-logo h1 {
+    font-size: 1em;
+  }
 }
 @media (max-width:800px) {
   html .body-container .nav-header .nav-wrapper nav {
@@ -423,6 +431,7 @@ html .body-container .main-mid-wrapper .img-wrapper .main-img-wrapper img {
   -webkit-filter: drop-shadow(-4px 5px 5px rgba(0, 0, 0, 0.6));
   filter: drop-shadow(-4px 5px 5px rgba(0, 0, 0, 0.6));
   height: 200px;
+  border-radius: 0.5em;
   animation: image-slide 4s cubic-bezier(0.5, 0.5, 0, 1);
   animation-fill-mode: forwards;
 }
@@ -642,18 +651,16 @@ html .cities-body-container .cities-nav-header .cities-nav-wrapper .cities-nav-l
   html .cities-body-container .cities-nav-header .cities-nav-wrapper .cities-nav-logo {
     display: flex;
     align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    width: 50%;
+    justify-content: flex-start;
+    width: 40%;
   }
 }
 @media (max-width:500px) {
   html .cities-body-container .cities-nav-header .cities-nav-wrapper .cities-nav-logo {
     display: flex;
     align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    width: 50%;
+    justify-content: flex-start;
+    width: 40%;
   }
 }
 html .cities-body-container .cities-nav-header .cities-nav-wrapper .cities-nav-logo img {
@@ -664,6 +671,16 @@ html .cities-body-container .cities-nav-header .cities-nav-wrapper .cities-nav-l
   font-size: 1.5em;
   color: white;
   width: 15%;
+}
+@media (max-width:800px) {
+  html .cities-body-container .cities-nav-header .cities-nav-wrapper .cities-nav-logo h1 {
+    font-size: 1em;
+  }
+}
+@media (max-width:500px) {
+  html .cities-body-container .cities-nav-header .cities-nav-wrapper .cities-nav-logo h1 {
+    font-size: 1em;
+  }
 }
 @media (max-width:800px) {
   html .cities-body-container .cities-nav-header .cities-nav-wrapper nav {
